[UI] Fix menu overflow

--- a/src/ui/pages/app/Settings.css
+++ b/src/ui/pages/app/Settings.css
@@ -32,6 +32,7 @@
   align-items: center;
   column-gap: 5px;
   max-width: 50vw;
+  color: var(--font-color-title);
 }
 
 .page.settings > .accounts > .actions .rc-menu__item button > div {
